<resources>
    <string name="app_name">Parstagram</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="enter_your_description">Enter your description...</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parstagram">Parstagram</string>

</resources>